2000-06-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Include.h : Changed enumeration FilterType to
 	FilterTypes, and QuantumTypes to QuantumType in order to match
 	last-minute API change in ImageMagick.

2000-06-22  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>

        * lib/Magick++/Pixels.cpp (indexes): Bugfix, use GetCacheViewIndexes()
        rather than GetIndexes().

2000-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Montage.h (gravity): Type of gravity_ argument, and
 	return value changed from 'unsigned int' to GravityType.

2000-04-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableArc, DrawableBezier, DrawablePolyline,
 	RoundRectangle): Added support for new drawing objects.

2000-04-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp: Removed all public methods which accept
 	Coordinate arguments except those that accept lists of
 	Coordinates.  Converted remaining drawable object methods into
 	individual classes which inherit from Drawable (e.g. "circle"
 	becomes "DrawableCircle"). The constructor for each class is
 	compatible with the original method. This results in annoying
 	changes to user code but provides more implementation flexibility.

2000-04-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp
 	(fillEllipse,fillRectangle,fillCircle,fillPolygon): Removed
 	methods.  Object filling is now based on whether fillColor or
 	penTexture are valid or not.  This reflects ImageMagick internal
 	changes.

	* lib/Image.cpp (fillColor): New method to specify fill color when
 	drawing objects.
	(strokeColor): New method to specify outline color when drawing
 	objects.
	(penColor): Setting penColor now sets fillColor and
 	strokeColor. Getting penColor retrieves the value of
 	strokeColor. This supports backwards compatability.

2000-03-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
