@@ -1590,11 +1590,11 @@ due to the limited size of the palette (256 or 65535 colors).</font></td>
 <td><font size=-1>Image &amp;</font>
 <br><font size=-1>Options</font></td>
 
-<td><font size=-1>unsigned int</font></td>
+<td><font size=-1>double</font></td>
 
 <td><font size=-1>void</font></td>
 
-<td><font size=-1>unsigned int fuzz_</font></td>
+<td><font size=-1>double fuzz_</font></td>
 
 <td><font size=-1>Colors within this distance are considered equal. A number
 of algorithms search for a target&nbsp; color. By default the color must
