@@ -2,7 +2,7 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <meta name="GENERATOR" content="Mozilla/4.7 [en] (X11; U; SunOS 5.6 sun4u) [Netscape]">
+   <meta name="GENERATOR" content="Mozilla/4.72 [en] (X11; U; SunOS 5.6 sun4u) [Netscape]">
    <meta name="Author" content="Bob Friesenhahn">
    <meta name="Description" content="Documentation on Magick++'s STL support templates.">
    <meta name="Keywords" content="STL,Magick++,ImageMagick">
@@ -1342,9 +1342,9 @@ loop extension) for.</font></td>
 <td><font size=-1>Image &amp;</font>
 <br><font size=-1>Options</font></td>
 
-<td><font size=-1>unsigned int</font></td>
+<td><font size=-1>double</font></td>
 
-<td><font size=-1>unsigned int fuzz_</font></td>
+<td><font size=-1>double fuzz_</font></td>
 
 <td><font size=-1>Colors within this distance are considered equal. A number
 of algorithms search for a target&nbsp; color. By default the color must
